Bug #43045 mysqld hang/core/... if cluster disconnect during startup of binlog